--- a/BrandLivingStyleGuide/sass/layout/_layout.scss
+++ b/BrandLivingStyleGuide/sass/layout/_layout.scss
@@ -9,13 +9,13 @@ main {
 }
 
 .code-example {
-  width: 50%;
+  width: 48%;
   float: left;
   margin-top: 2rem;
 }
 
 .notes {
-  width: 50%;
+  width: 48%;
   float: right;
   margin-top: 2rem;
 }
